[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/main/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Timer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/main/addTimers.gd" type="Script" id=3]

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )
scroll_speed = 20

[node name="Root" parent="." index="0" instance=ExtResource( 2 )]

visible = false
position = Vector2( 115, 84 )

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Position2D" type="Position2D" parent="." index="2"]

visible = false
position = Vector2( 116, 42 )
_sections_unfolded = [ "Transform" ]

[node name="AddTimer" type="Node2D" parent="." index="3"]

position = Vector2( 430, 120 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Button" type="Button" parent="AddTimer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="RemoveTimer" type="Button" parent="AddTimer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = -10.0
margin_right = -30.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-"
flat = false
align = 1

[node name="RemoveAll" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1084.0
margin_top = 12.0
margin_right = 1169.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Remove All"
flat = false
align = 1

[node name="LineEditParent" type="CanvasLayer" parent="." index="5"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="LineEdit" type="LineEdit" parent="LineEditParent" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 237.0
margin_top = 288.0
margin_right = 916.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0


